# fingerprint-generator

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
assets/: example-output.json  update.py
fpgen/: __init__.py  __main__.py  bayesian_network.py  exceptions.py  generator.py  pkgman.py  query.py  structs.py  trace.py  unpacker.py  utils.py
tests/: README.md  failed_cases.py  generator_matches_trace.py  profile.py  speed_test.py  user_inputs.py
