[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fpgen"
version = "1.2.0"
description = "A fast & comprehensive browser fingerprint generator"
authors = ["daijro <daijro.dev@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/scrapfly/fingerprint-generator"
keywords = [
    "client",
    "headers",
    "fingerprint",
    "generator",
    "browser",
    "http",
    "scraping",
    "requests",
    "playwright",
]
classifiers = [
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "*"
indexed-zstd = "*"
orjson = "*"
numpy = "*"
zstandard = "*"
httpx = "*"

[tool.poetry.scripts]
fpgen = "fpgen.__main__:cli"